# claude-code-plugins

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TASKS.md  package-lock.json  package.json  plugin.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.tasks/: INDEX.md
changelog/: index.md  v5.md  v6.md
commands/: init.md
docs/: agents.md  commands.md  external-specs.md  getting-started.md  tutorial.md  workflow-progress.md  workflows.md
full-stack-spec-driven-dev/: CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md
plugin/: TODO.md  (+4 more)
tests/sdd/: conftest.py  package-lock.json  package.json  pyproject.toml  run-all-tests.sh  test_helpers.py  tsconfig.json  vitest.config.ts
tests/sdd/fast/: test_sdd_init.py  test_sdd_new_change.py
tests/sdd/integration/: test_full_stack_init.py
tests/sdd/prompts/: sdd-init-backend-only.txt
tests/sdd/src/: test-helpers.ts
tests/sdd/src/fast/: database-component.test.ts  postgresql-skill.test.ts  sdd-init.test.ts  sdd-new-change.test.ts
tests/sdd/src/lib/: claude.ts  fs.ts  index.ts  paths.ts  process.ts
tests/sdd/src/prompts/: postgresql-backup.txt  postgresql-create-schema.txt  postgresql-deploy-docker.txt  postgresql-introspection.txt  postgresql-migration-plan.txt  postgresql-query-performance.txt  postgresql-seed-data.txt  postgresql-setup-users.txt  sdd-init-backend-only.txt  sdd-init-backend-with-database.txt  sdd-init-fullstack.txt
tests/sdd/src/tests/unit/database-component/: skill-structure.test.ts
tests/sdd/src/tests/workflows/: sdd-init.test.ts  sdd-new-change.test.ts
(+472 files in other folders)
